@@ -4,26 +4,29 @@ import it.pagopa.pn.papertracker.generated.openapi.msclient.paperchannel.model.P
 import it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.PaperEvent;
 import it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.Tracking;
 import it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.TrackingCreationRequest;
-import it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.Event;
-import it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.PaperTrackings;
-import it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.PaperTrackingsState;
-import it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.ProductType;
+import it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.*;
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
+import org.springframework.util.CollectionUtils;
 
 import java.time.Duration;
 import java.time.Instant;
+import java.util.Objects;
+import java.util.Optional;
 
+@RequiredArgsConstructor(access = AccessLevel.NONE)
 public class PaperTrackingsMapper {
-
-    private PaperTrackingsMapper() {
-        // Utility class, no instantiation
-    }
 
     public static PaperTrackings toPaperTrackings(TrackingCreationRequest trackingCreationRequest, Duration paperTrackingsTtlDuration) {
         PaperTrackings paperTrackings = new PaperTrackings();
-        paperTrackings.setTrackingId(trackingCreationRequest.getTrackingId());
+        paperTrackings.setTrackingId(String.join(".",trackingCreationRequest.getAttemptId(), trackingCreationRequest.getPcRetry()));
         paperTrackings.setUnifiedDeliveryDriver(trackingCreationRequest.getUnifiedDeliveryDriver());
         paperTrackings.setProductType(ProductType.valueOf(trackingCreationRequest.getProductType()));
         paperTrackings.setState(PaperTrackingsState.AWAITING_FINAL_STATUS_CODE);
+        paperTrackings.setAttemptId(trackingCreationRequest.getAttemptId());
+        paperTrackings.setPcRetry(trackingCreationRequest.getPcRetry());
+        paperTrackings.setValidationFlow(new ValidationFlow());
+        paperTrackings.setPaperStatus(new PaperStatus());
         paperTrackings.setTtl(Instant.now().plus(paperTrackingsTtlDuration).toEpochMilli());
         return paperTrackings;
     }
@@ -34,6 +37,10 @@ public class PaperTrackingsMapper {
         paperTrackings.setUnifiedDeliveryDriver(pcRetryResponse.getDeliveryDriverId());
         paperTrackings.setProductType(productType);
         paperTrackings.setState(PaperTrackingsState.AWAITING_FINAL_STATUS_CODE);
+        paperTrackings.setAttemptId(pcRetryResponse.getParentRequestId());
+        paperTrackings.setPcRetry(pcRetryResponse.getPcRetry());
+        paperTrackings.setValidationFlow(new ValidationFlow());
+        paperTrackings.setPaperStatus(new PaperStatus());
         paperTrackings.setTtl(Instant.now().plus(paperTrackingsTtlDuration).toEpochMilli());
         return paperTrackings;
     }
@@ -41,112 +48,85 @@ public class PaperTrackingsMapper {
     public static Tracking toTracking(PaperTrackings paperTrackings) {
         Tracking tracking = new Tracking();
         tracking.setTrackingId(paperTrackings.getTrackingId());
+        tracking.setAttemptId(paperTrackings.getAttemptId());
+        tracking.setPcRetry(paperTrackings.getPcRetry());
         tracking.setUnifiedDeliveryDriver(paperTrackings.getUnifiedDeliveryDriver());
-        tracking.setProductType(
-                paperTrackings.getProductType() != null ?
-                        it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ProductType.valueOf(paperTrackings.getProductType().name()) :
-                        null
-        );
-        tracking.setEvents(
-                paperTrackings.getEvents() != null ?
-                        paperTrackings.getEvents().stream()
-                                .map(PaperTrackingsMapper::toPaperEvent)
-                                .collect(java.util.stream.Collectors.toList())
-                        : null
-        );
-        tracking.setValidationFlow(toDtoValidationFlow(paperTrackings.getValidationFlow()));
         tracking.setOcrRequestId(paperTrackings.getOcrRequestId());
         tracking.setNextRequestIdPcretry(paperTrackings.getNextRequestIdPcretry());
-        tracking.setPcRetry(paperTrackings.getNextRequestIdPcretry()); // Se serve
-        tracking.setPaperStatus(toDtoPaperStatus(paperTrackings.getPaperStatus()));
-        tracking.setState(
-                paperTrackings.getState() != null ?
-                        Tracking.StateEnum.valueOf(paperTrackings.getState().name()) :
-                        null
-        );
-        // attemptId non presente in PaperTrackings al momento
+        tracking.setPcRetry(paperTrackings.getNextRequestIdPcretry());
+        tracking.setAttemptId(paperTrackings.getAttemptId());
+        tracking.setCreatedAt(paperTrackings.getCreatedAt());
+        tracking.setUpdatedAt(paperTrackings.getUpdatedAt());
+        if(Objects.nonNull(paperTrackings.getProductType())){
+            tracking.setProductType(it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ProductType.valueOf(paperTrackings.getProductType().getValue()));
+        }
+        if(!CollectionUtils.isEmpty(paperTrackings.getEvents())){
+            tracking.setEvents(paperTrackings.getEvents().stream().map(PaperTrackingsMapper::toPaperEvent).collect(java.util.stream.Collectors.toList()));
+        }
+        if(Objects.nonNull(paperTrackings.getValidationFlow())) {
+            tracking.setValidationFlow(toDtoValidationFlow(paperTrackings.getValidationFlow()));
+        }
+        if(Objects.nonNull(paperTrackings.getPaperStatus())){
+            tracking.setPaperStatus(toDtoPaperStatus(paperTrackings.getPaperStatus()));
+        }
+        if(Objects.nonNull(paperTrackings.getState())){
+            tracking.setState(Tracking.StateEnum.valueOf(paperTrackings.getState().name()));
+        }
         return tracking;
     }
 
     private static PaperEvent toPaperEvent(Event event) {
-        if (event == null) {
-            return null;
-        }
         PaperEvent paperEvent = new PaperEvent();
-        java.util.Date requestTimestamp = event.getRequestTimestamp() != null ? java.util.Date.from(event.getRequestTimestamp()) : null;
-        java.util.Date statusTimestamp = event.getStatusTimestamp() != null ? java.util.Date.from(event.getStatusTimestamp()) : null;
-        paperEvent.setRequestTimestamp(requestTimestamp);
+        paperEvent.setRequestTimestamp(event.getRequestTimestamp());
         paperEvent.setStatusCode(event.getStatusCode());
-        paperEvent.setStatusTimestamp(statusTimestamp);
-        paperEvent.setProductType(
-                event.getProductType() != null ?
-                        it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ProductType.valueOf(event.getProductType().name()) :
-                        null
-        );
+        paperEvent.setStatusTimestamp(event.getStatusTimestamp());
         paperEvent.setDeliveryFailureCause(event.getDeliveryFailureCause());
         paperEvent.setRegisteredLetterCode(event.getRegisteredLetterCode());
-        paperEvent.setAttachments(
-                event.getAttachments() != null ?
-                        event.getAttachments().stream()
-                                .map(PaperTrackingsMapper::toDtoAttachment)
-                                .collect(java.util.stream.Collectors.toList())
-                        : null);
-
+        if(!CollectionUtils.isEmpty(event.getAttachments())){
+            paperEvent.setAttachments(event.getAttachments().stream().map(PaperTrackingsMapper::toDtoAttachment).toList());
+        }
+        if(Objects.nonNull(event.getProductType())) {
+            it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ProductType.valueOf(event.getProductType().getValue());
+        }
         return paperEvent;
     }
 
-    private static it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.Attachment toDtoAttachment(
-            it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.Attachment entityAttachment) {
-        if (entityAttachment == null) {
-            return null;
-        }
-        it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.Attachment dto =
-                new it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.Attachment();
+    private static it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.Attachment toDtoAttachment(it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.Attachment entityAttachment) {
+        it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.Attachment dto = new it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.Attachment();
         dto.setId(entityAttachment.getId());
         dto.setDocumentType(entityAttachment.getDocumentType());
         dto.setUrl(entityAttachment.getUri());
-        dto.setDate(entityAttachment.getDate() != null ? entityAttachment.getDate().toString() : null);
+        dto.setDate(entityAttachment.getDate());
         return dto;
     }
 
-    private static it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ValidationFlow toDtoValidationFlow(
-            it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.ValidationFlow entity) {
-        if (entity == null) {
-            return null;
-        }
-        it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ValidationFlow dto =
-                new it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ValidationFlow();
-
-        dto.setOcrEnabled(entity.getOcrEnabled() != null ? entity.getOcrEnabled().toString() : null);
-        dto.setSequencesValidationTimestamp(entity.getSequencesValidationTimestamp() != null ? java.util.Date.from(entity.getSequencesValidationTimestamp()) : null);
-        dto.setOcrRequestTimestamp(entity.getOcrRequestTimestamp() != null ? java.util.Date.from(entity.getOcrRequestTimestamp()) : null);
-        dto.setDematValidationTimestamp(entity.getDematValidationTimestamp() != null ? java.util.Date.from(entity.getDematValidationTimestamp()) : null);
+    private static it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ValidationFlow toDtoValidationFlow(it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.ValidationFlow entity) {
+        it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ValidationFlow dto = new it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.ValidationFlow();
+        dto.setOcrEnabled(entity.getOcrEnabled());
+        dto.setSequencesValidationTimestamp(entity.getSequencesValidationTimestamp());
+        dto.setOcrRequestTimestamp(entity.getOcrRequestTimestamp());
+        dto.setDematValidationTimestamp(entity.getDematValidationTimestamp());
+        dto.setFinalEventBuilderTimestamp(entity.getFinalEventBuilderTimestamp());
         return dto;
     }
 
-    private static it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.PaperStatus toDtoPaperStatus(
-            it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.PaperStatus entity) {
-        if (entity == null) {
-            return null;
-        }
-        it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.PaperStatus dto =
-                new it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.PaperStatus();
+    private static it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.PaperStatus toDtoPaperStatus(it.pagopa.pn.papertracker.middleware.dao.dynamo.entity.PaperStatus entity) {
+
+        it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.PaperStatus dto = new it.pagopa.pn.papertracker.generated.openapi.server.v1.dto.PaperStatus();
 
         dto.setRegisteredLetterCode(entity.getRegisteredLetterCode());
         dto.setDeliveryFailureCause(entity.getDeliveryFailureCause());
         dto.setDiscoveredAddress(entity.getDiscoveredAddress());
         dto.setFinalStatusCode(entity.getFinalStatusCode());
-        dto.setValidatedSequenceTimestamp(entity.getValidatedSequenceTimestamp() != null ? java.util.Date.from(entity.getValidatedSequenceTimestamp()) : null);
+        dto.setValidatedSequenceTimestamp(entity.getValidatedSequenceTimestamp());
         dto.setValidatedAttachmentUri(entity.getValidatedAttachmentUri());
         dto.setValidatedAttachmentType(entity.getValidatedAttachmentType());
-        dto.setValidatedEvents(
-                entity.getValidatedEvents() != null ?
-                        entity.getValidatedEvents().stream()
-                                .map(PaperTrackingsMapper::toPaperEvent)
-                                .collect(java.util.stream.Collectors.toList())
-                        : null
-        );
-
+        dto.setFinalDematTimestamp(entity.getFinalDematTimestamp());
+        dto.setEstimatedPaperDeliveryTimestamp(entity.getEstimatedPaperDeliveryTimestamp());
+        dto.setActualPaperDeliveryTimestamp(entity.getActualPaperDeliveryTimestamp());
+        if(!CollectionUtils.isEmpty(entity.getValidatedEvents())){
+            dto.setValidatedEvents(entity.getValidatedEvents().stream().map(PaperTrackingsMapper::toPaperEvent).toList());
+        }
         return dto;
     }
 }
